Fix file path URL's for JAR files so ParentLastClassLoader works in Windows environment; tweaks to application startup scripts.